--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://juccialt0007.github.io/cm-lookup-table/",
+  "homepage": "https://juccialt0007.github.io/cm-lookup-tables/",
   "name": "cm-lookup",
   "version": "0.1.2",
   "private": true,
