--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "CryptoMines Sheet",
-  "name": "CryptoMines Sheet by #Jucci0007",
+  "name": "CryptoMine Sheet by #Jucci0007",
   "icons": [
     {
       "src": "favicon.ico",
