--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
