--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "predeploy": "npm run build",
